sort.basic.comb.AlgCombSort11.scala.error
Compilation error:
AlgCombSort11:16: error: 'while' expected but identifier found.
    i=0
    ^AlgCombSort11:17: error: '(' expected but ';' found.
    while (i+ecart<g){
^AlgCombSort11:23: error: ';' expected but 'while' found.
  }while (ec)
   ^AlgCombSort11:29: error: Unmatched closing brace '}' ignored here
}
^